# crafting-interpreters

./: .gitignore  README.md
citree/: .gitignore  .prettierignore  README.md  ast.citree  package-lock.json  package.json  tsconfig.json
citree/src/: imports.ts  main.ts  parser.ts  paths.ts  scanner.ts  types.ts
citree/src/templates/: index.js  index.ts  main.ts.njk
citree/templates/: main.njk
citree/test/: imports.ts  parser.ts  scanner.ts  templates.ts
clox/: .gitignore  CMakeLists.txt  README.md  env.example  justfile
clox/examples/: exceptions.lox
clox/src/: chunk.c  chunk.h  common.h  compiler.c  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  prelude.h  scanner.c  scanner.h  table.c  value.c  value.h  vm.c  vm.h
tslox/: .gitignore  README.md  ast-printer.ts  error.ts  expr.txt  lox.ts  package-lock.json  package.json  parser.ts  scanner.ts  token.ts  tsconfig.json
tslox/scripts/: generate-ast.js  generate-ast.ts
tslox/src/: callable.ts  class.ts  environment.ts  error.ts  expr.ast  function.ts  interpreter.ts  lox.ts  parser.ts  printer.ts  resolver.ts  scanner.ts  stmt.ast  token.ts  value.ts
